--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DB_USERNAME=Aitanantc
 DB_PASSWORD=Anabanana
 DB_CONNECTIONSTRING=mongodb+srv://Aitanantc:Anabanana@clusterat.ybkxaou.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://Aitanantc:Anabanana@clusterat.ybkxaou.mongodb.net/?retryWrites=true&w=majority
+PORT=3000
