--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "node server.js",
     "start": "nodemon server.js",
     "swagger-autogen": "node ./swagger.js",
-    "swagger": "node ./swagger.js"
+    "swagger": "node ./swagger.js",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,8 @@
     "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
     "eslint": "^8.24.0",
     "nodemon": "^2.0.20",
     "swagger-autogen": "^2.22.0"
